cluster/crier_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prow
  name: crier
  labels:
    app: crier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crier
  template:
    metadata:
      labels:
        app: crier
    spec:
      serviceAccountName: crier
      terminationGracePeriodSeconds: 30
      containers:
      - name: crier
        image: gcr.io/k8s-prow/crier:v20200924-4bb1aa1ffa
        args:
        - --blob-storage-workers=1
        - --config-path=/etc/config/config.yaml
        - --s3-credentials-file=/etc/s3-credentials/service-account.json
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        - --github-token-path=/etc/github/oauth
        - --github-workers=5
        - --job-config-path=/etc/job-config
        - --kubeconfig=/etc/kubeconfig/config
        - --kubernetes-blob-storage-workers=1
        - --slack-token-file=/etc/slack/token
        - --slack-workers=1
        volumeMounts:
        - mountPath: /etc/kubeconfig
          name: kubeconfig
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - name: oauth
          mountPath: /etc/github
          readOnly: true
        - name: slack
          mountPath: /etc/slack
          readOnly: true
        - name: s3-credentials
          mountPath: /etc/s3-credentials
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: oauth
        secret:
          secretName: oauth-token
      - name: slack
        secret:
          secretName: slack-token
      - name: kubeconfig
        secret:
          defaultMode: 420
          secretName: kubeconfig
      - name: s3-credentials
        secret:
          secretName: s3-credentials
