cluster/deck_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prow
  name: deck
  labels:
    app: deck
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: deck
  template:
    metadata:
      labels:
        app: deck
    spec:
      serviceAccountName: deck
      terminationGracePeriodSeconds: 30
      containers:
        - name: deck
          image: gcr.io/k8s-prow/deck:v20200924-4bb1aa1ffa
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          args:
            - --kubeconfig=/etc/kubeconfig/config
            - --tide-url=http://tide/
            - --hook-url=http://hook:8888/plugin-help
            - --redirect-http-to=prow.k8s.io
            - --oauth-url=/github-login
            - --config-path=/etc/config/config.yaml
            - --job-config-path=/etc/job-config
            - --spyglass=true
            - --rerun-creates-job
            - --github-token-path=/etc/github/oauth
            - --github-endpoint=http://ghproxy
            - --github-endpoint=https://api.github.com
            - --github-oauth-config-file=/etc/githuboauth/secret
            - --cookie-secret=/etc/cookie/secret
            - --plugin-config=/etc/plugins/plugins.yaml
            - --s3-credentials-file=/etc/s3-credentials/service-account.json
          volumeMounts:
            - name: oauth-config
              mountPath: /etc/githuboauth
              readOnly: true
            - name: cookie-secret
              mountPath: /etc/cookie
              readOnly: true
            - mountPath: /etc/kubeconfig
              name: kubeconfig
              readOnly: true
            - name: config
              mountPath: /etc/config
              readOnly: true
            - name: job-config
              mountPath: /etc/job-config
              readOnly: true
            - name: oauth-token
              mountPath: /etc/github
              readOnly: true
            - name: plugins
              mountPath: /etc/plugins
              readOnly: true
            - name: s3-credentials
              mountPath: /etc/s3-credentials
              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 3
            timeoutSeconds: 600
      volumes:
        - name: oauth-config
          secret:
            secretName: github-oauth-config
        - name: oauth-token
          secret:
            secretName: oauth-token
        - name: cookie-secret
          secret:
            secretName: cookie
        - name: kubeconfig
          secret:
            defaultMode: 420
            secretName: kubeconfig
        - name: config
          configMap:
            name: config
        - name: job-config
          configMap:
            name: job-config
        - name: plugins
          configMap:
            name: plugins
        - name: s3-credentials
          secret:
            secretName: s3-credentials
