cluster/plank_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prow
  name: plank
  labels:
    app: plank
spec:
  # Mutually exclusive with prow-controller-manager. Only one of them may have more than zero replicas.
  # If this is re-enabled, the service monitor must be changed back to point to plank:
  # https://github.com/kubernetes/test-infra/blob/a35145f8e7e00d72a69dc1e8be57b8cf09184a52/config/prow/cluster/monitoring/prow_servicemonitors.yaml#L133
  replicas: 0 # Do not scale up.
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plank
  template:
    metadata:
      labels:
        app: plank
    spec:
      serviceAccountName: plank
      containers:
      - name: plank
        image: gcr.io/k8s-prow/plank:v20200924-4bb1aa1ffa
        args:
        - --config-path=/etc/config/config.yaml
        - --dry-run=false
        - --job-config-path=/etc/job-config
        - --kubeconfig=/etc/kubeconfig/config
        - --skip-report=true
        volumeMounts:
        - mountPath: /etc/kubeconfig
          name: kubeconfig
          readOnly: true
        - name: oauth
          mountPath: /etc/github
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
      volumes:
      - name: kubeconfig
        secret:
          defaultMode: 420
          secretName: kubeconfig
      - name: oauth
        secret:
          secretName: oauth-token
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
