cluster/tide_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prow
  name: tide
  labels:
    app: tide
spec:
  replicas: 1 # Do not scale up.
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tide
  template:
    metadata:
      labels:
        app: tide
    spec:
      serviceAccountName: tide
      containers:
      - name: tide
        image: gcr.io/k8s-prow/tide:v20200924-4bb1aa1ffa
        args:
        - --dry-run=false
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        - --github-token-path=/etc/github/oauth
        - --config-path=/etc/config/config.yaml
        - --job-config-path=/etc/job-config
        - --history-uri=gs://k8s-prow/tide-history.json
        - --status-path=gs://k8s-prow/tide-status-checkpoint.yaml
        - --s3-credentials-file=/etc/s3-credentials/service-account.json
        ports:
        - name: http
          containerPort: 8888
        volumeMounts:
        - name: oauth
          mountPath: /etc/github
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - name: s3-credentials
          mountPath: /etc/s3-credentials
          readOnly: true
      volumes:
      - name: oauth
        secret:
          secretName: oauth-token
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: s3-credentials
        secret:
          secretName: s3-credentials
