cluster/deck_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deck
  namespace: prow
  name: deck
spec:
  selector:
    app: deck
  ports:
    - name: main
      port: 80
      targetPort: 8080
    - name: metrics
      port: 9090
  type: NodePort
